# public/docs/openapi.yaml
@@ -7,80 +7,6 @@ servers:
   -
     url: 'http://0.0.0.0:8000'
 paths:
-  /api/user:
-    get:
-      summary: Login
-      operationId: login
-      description: 'This endpoint is used to login a user to the system.'
-      parameters:
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses:
-        200:
-          description: 'Successful Login'
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: 'User Login Successfully'
-                  access_token: 8|MgowQLkdpShwrb8AI9j1YAGmwnDjAOeE17XrP5nb
-                  token_type: Bearer
-                properties:
-                  message:
-                    type: string
-                    example: 'User Login Successfully'
-                  access_token:
-                    type: string
-                    example: 8|MgowQLkdpShwrb8AI9j1YAGmwnDjAOeE17XrP5nb
-                  token_type:
-                    type: string
-                    example: Bearer
-        401:
-          description: 'Failed Login'
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: 'Invalid login credentials'
-                properties:
-                  message:
-                    type: string
-                    example: 'Invalid login credentials'
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  description: ''
-                  example: ian@gmail.com
-                password:
-                  type: string
-                  description: ''
-                  example: '12345678'
-              required:
-                - email
-                - password
-      security: []
   /api/v1/login:
     get:
       summary: Login
