# routes/api.php
@@ -38,9 +38,9 @@ use App\Http\Controllers\ApiController\CommentController;
      *
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
+// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//     return $request->user();
+// });
 
 
 Route::group(['prefix' => 'v1'], function () {
